parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> js
Rule 1     js -> element js
Rule 2     js -> <empty>
Rule 3     element -> FUNCTION IDENTIFIER LPAREN optparams RPAREN compoundstmt
Rule 4     element -> stmt SEMICOLON
Rule 5     element -> stmt
Rule 6     optparams -> params
Rule 7     optparams -> <empty>
Rule 8     params -> IDENTIFIER COMMA params
Rule 9     params -> IDENTIFIER
Rule 10    compoundstmt -> LBRACE stmts RBRACE
Rule 11    stmts -> <empty>
Rule 12    stmts -> stmt SEMICOLON stmts
Rule 13    stmt -> IF exp compoundstmt
Rule 14    stmt -> IF exp compoundstmt ELSE compoundstmt
Rule 15    stmt -> IDENTIFIER EQUAL exp
Rule 16    stmt -> RETURN exp
Rule 17    stmt -> VAR IDENTIFIER EQUAL exp
Rule 18    stmt -> exp
Rule 19    exp -> IDENTIFIER
Rule 20    exp -> NUMBER
Rule 21    exp -> STRING
Rule 22    exp -> TRUE
Rule 23    exp -> FALSE
Rule 24    exp -> NOT exp
Rule 25    exp -> LPAREN exp RPAREN
Rule 26    exp -> exp PLUS exp
Rule 27    exp -> exp MINUS exp
Rule 28    exp -> exp TIMES exp
Rule 29    exp -> exp MOD exp
Rule 30    exp -> exp DIVIDE exp
Rule 31    exp -> exp EQUALEQUAL exp
Rule 32    exp -> exp LE exp
Rule 33    exp -> exp LT exp
Rule 34    exp -> exp GE exp
Rule 35    exp -> exp GT exp
Rule 36    exp -> exp ANDAND exp
Rule 37    exp -> exp OROR exp
Rule 38    exp -> IDENTIFIER LPAREN optargs RPAREN
Rule 39    optargs -> args
Rule 40    optargs -> <empty>
Rule 41    args -> exp COMMA args
Rule 42    args -> exp

Terminals, with rules where they appear

ANDAND               : 36
COMMA                : 8 41
DIVIDE               : 30
ELSE                 : 14
EQUAL                : 15 17
EQUALEQUAL           : 31
FALSE                : 23
FUNCTION             : 3
GE                   : 34
GT                   : 35
IDENTIFIER           : 3 8 9 15 17 19 38
IF                   : 13 14
LBRACE               : 10
LBRACKET             : 
LE                   : 32
LPAREN               : 3 25 38
LT                   : 33
MINUS                : 27
MOD                  : 29
NOT                  : 24
NUMBER               : 20
OROR                 : 37
PLUS                 : 26
RBRACE               : 10
RBRACKET             : 
RETURN               : 16
RPAREN               : 3 25 38
SEMICOLON            : 4 12
STRING               : 21
TIMES                : 28
TRUE                 : 22
VAR                  : 17
error                : 

Nonterminals, with rules where they appear

args                 : 39 41
compoundstmt         : 3 13 14 14
element              : 1
exp                  : 13 14 15 16 17 18 24 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 41 42
js                   : 1 0
optargs              : 38
optparams            : 3
params               : 6 8
stmt                 : 4 5 12
stmts                : 10 12

Parsing method: LALR

state 0

    (0) S' -> . js
    (1) js -> . element js
    (2) js -> .
    (3) element -> . FUNCTION IDENTIFIER LPAREN optparams RPAREN compoundstmt
    (4) element -> . stmt SEMICOLON
    (5) element -> . stmt
    (13) stmt -> . IF exp compoundstmt
    (14) stmt -> . IF exp compoundstmt ELSE compoundstmt
    (15) stmt -> . IDENTIFIER EQUAL exp
    (16) stmt -> . RETURN exp
    (17) stmt -> . VAR IDENTIFIER EQUAL exp
    (18) stmt -> . exp
    (19) exp -> . IDENTIFIER
    (20) exp -> . NUMBER
    (21) exp -> . STRING
    (22) exp -> . TRUE
    (23) exp -> . FALSE
    (24) exp -> . NOT exp
    (25) exp -> . LPAREN exp RPAREN
    (26) exp -> . exp PLUS exp
    (27) exp -> . exp MINUS exp
    (28) exp -> . exp TIMES exp
    (29) exp -> . exp MOD exp
    (30) exp -> . exp DIVIDE exp
    (31) exp -> . exp EQUALEQUAL exp
    (32) exp -> . exp LE exp
    (33) exp -> . exp LT exp
    (34) exp -> . exp GE exp
    (35) exp -> . exp GT exp
    (36) exp -> . exp ANDAND exp
    (37) exp -> . exp OROR exp
    (38) exp -> . IDENTIFIER LPAREN optargs RPAREN

    $end            reduce using rule 2 (js -> .)
    FUNCTION        shift and go to state 5
    IF              shift and go to state 11
    IDENTIFIER      shift and go to state 4
    RETURN          shift and go to state 1
    VAR             shift and go to state 9
    NUMBER          shift and go to state 2
    STRING          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 12
    NOT             shift and go to state 15
    LPAREN          shift and go to state 8

    stmt                           shift and go to state 7
    element                        shift and go to state 13
    exp                            shift and go to state 14
    js                             shift and go to state 10

state 1

    (16) stmt -> RETURN . exp
    (19) exp -> . IDENTIFIER
    (20) exp -> . NUMBER
    (21) exp -> . STRING
    (22) exp -> . TRUE
    (23) exp -> . FALSE
    (24) exp -> . NOT exp
    (25) exp -> . LPAREN exp RPAREN
    (26) exp -> . exp PLUS exp
    (27) exp -> . exp MINUS exp
    (28) exp -> . exp TIMES exp
    (29) exp -> . exp MOD exp
    (30) exp -> . exp DIVIDE exp
    (31) exp -> . exp EQUALEQUAL exp
    (32) exp -> . exp LE exp
    (33) exp -> . exp LT exp
    (34) exp -> . exp GE exp
    (35) exp -> . exp GT exp
    (36) exp -> . exp ANDAND exp
    (37) exp -> . exp OROR exp
    (38) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 16
    NUMBER          shift and go to state 2
    STRING          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 12
    NOT             shift and go to state 15
    LPAREN          shift and go to state 8

    exp                            shift and go to state 17

state 2

    (20) exp -> NUMBER .

    PLUS            reduce using rule 20 (exp -> NUMBER .)
    MINUS           reduce using rule 20 (exp -> NUMBER .)
    TIMES           reduce using rule 20 (exp -> NUMBER .)
    MOD             reduce using rule 20 (exp -> NUMBER .)
    DIVIDE          reduce using rule 20 (exp -> NUMBER .)
    EQUALEQUAL      reduce using rule 20 (exp -> NUMBER .)
    LE              reduce using rule 20 (exp -> NUMBER .)
    LT              reduce using rule 20 (exp -> NUMBER .)
    GE              reduce using rule 20 (exp -> NUMBER .)
    GT              reduce using rule 20 (exp -> NUMBER .)
    ANDAND          reduce using rule 20 (exp -> NUMBER .)
    OROR            reduce using rule 20 (exp -> NUMBER .)
    SEMICOLON       reduce using rule 20 (exp -> NUMBER .)
    FUNCTION        reduce using rule 20 (exp -> NUMBER .)
    IF              reduce using rule 20 (exp -> NUMBER .)
    IDENTIFIER      reduce using rule 20 (exp -> NUMBER .)
    RETURN          reduce using rule 20 (exp -> NUMBER .)
    VAR             reduce using rule 20 (exp -> NUMBER .)
    NUMBER          reduce using rule 20 (exp -> NUMBER .)
    STRING          reduce using rule 20 (exp -> NUMBER .)
    TRUE            reduce using rule 20 (exp -> NUMBER .)
    FALSE           reduce using rule 20 (exp -> NUMBER .)
    NOT             reduce using rule 20 (exp -> NUMBER .)
    LPAREN          reduce using rule 20 (exp -> NUMBER .)
    $end            reduce using rule 20 (exp -> NUMBER .)
    LBRACE          reduce using rule 20 (exp -> NUMBER .)
    RPAREN          reduce using rule 20 (exp -> NUMBER .)
    COMMA           reduce using rule 20 (exp -> NUMBER .)


state 3

    (22) exp -> TRUE .

    PLUS            reduce using rule 22 (exp -> TRUE .)
    MINUS           reduce using rule 22 (exp -> TRUE .)
    TIMES           reduce using rule 22 (exp -> TRUE .)
    MOD             reduce using rule 22 (exp -> TRUE .)
    DIVIDE          reduce using rule 22 (exp -> TRUE .)
    EQUALEQUAL      reduce using rule 22 (exp -> TRUE .)
    LE              reduce using rule 22 (exp -> TRUE .)
    LT              reduce using rule 22 (exp -> TRUE .)
    GE              reduce using rule 22 (exp -> TRUE .)
    GT              reduce using rule 22 (exp -> TRUE .)
    ANDAND          reduce using rule 22 (exp -> TRUE .)
    OROR            reduce using rule 22 (exp -> TRUE .)
    SEMICOLON       reduce using rule 22 (exp -> TRUE .)
    FUNCTION        reduce using rule 22 (exp -> TRUE .)
    IF              reduce using rule 22 (exp -> TRUE .)
    IDENTIFIER      reduce using rule 22 (exp -> TRUE .)
    RETURN          reduce using rule 22 (exp -> TRUE .)
    VAR             reduce using rule 22 (exp -> TRUE .)
    NUMBER          reduce using rule 22 (exp -> TRUE .)
    STRING          reduce using rule 22 (exp -> TRUE .)
    TRUE            reduce using rule 22 (exp -> TRUE .)
    FALSE           reduce using rule 22 (exp -> TRUE .)
    NOT             reduce using rule 22 (exp -> TRUE .)
    LPAREN          reduce using rule 22 (exp -> TRUE .)
    $end            reduce using rule 22 (exp -> TRUE .)
    LBRACE          reduce using rule 22 (exp -> TRUE .)
    RPAREN          reduce using rule 22 (exp -> TRUE .)
    COMMA           reduce using rule 22 (exp -> TRUE .)


state 4

    (15) stmt -> IDENTIFIER . EQUAL exp
    (19) exp -> IDENTIFIER .
    (38) exp -> IDENTIFIER . LPAREN optargs RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    EQUAL           shift and go to state 18
    PLUS            reduce using rule 19 (exp -> IDENTIFIER .)
    MINUS           reduce using rule 19 (exp -> IDENTIFIER .)
    TIMES           reduce using rule 19 (exp -> IDENTIFIER .)
    MOD             reduce using rule 19 (exp -> IDENTIFIER .)
    DIVIDE          reduce using rule 19 (exp -> IDENTIFIER .)
    EQUALEQUAL      reduce using rule 19 (exp -> IDENTIFIER .)
    LE              reduce using rule 19 (exp -> IDENTIFIER .)
    LT              reduce using rule 19 (exp -> IDENTIFIER .)
    GE              reduce using rule 19 (exp -> IDENTIFIER .)
    GT              reduce using rule 19 (exp -> IDENTIFIER .)
    ANDAND          reduce using rule 19 (exp -> IDENTIFIER .)
    OROR            reduce using rule 19 (exp -> IDENTIFIER .)
    SEMICOLON       reduce using rule 19 (exp -> IDENTIFIER .)
    FUNCTION        reduce using rule 19 (exp -> IDENTIFIER .)
    IF              reduce using rule 19 (exp -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 19 (exp -> IDENTIFIER .)
    RETURN          reduce using rule 19 (exp -> IDENTIFIER .)
    VAR             reduce using rule 19 (exp -> IDENTIFIER .)
    NUMBER          reduce using rule 19 (exp -> IDENTIFIER .)
    STRING          reduce using rule 19 (exp -> IDENTIFIER .)
    TRUE            reduce using rule 19 (exp -> IDENTIFIER .)
    FALSE           reduce using rule 19 (exp -> IDENTIFIER .)
    NOT             reduce using rule 19 (exp -> IDENTIFIER .)
    $end            reduce using rule 19 (exp -> IDENTIFIER .)
    LPAREN          shift and go to state 19

  ! LPAREN          [ reduce using rule 19 (exp -> IDENTIFIER .) ]


state 5

    (3) element -> FUNCTION . IDENTIFIER LPAREN optparams RPAREN compoundstmt

    IDENTIFIER      shift and go to state 20


state 6

    (21) exp -> STRING .

    PLUS            reduce using rule 21 (exp -> STRING .)
    MINUS           reduce using rule 21 (exp -> STRING .)
    TIMES           reduce using rule 21 (exp -> STRING .)
    MOD             reduce using rule 21 (exp -> STRING .)
    DIVIDE          reduce using rule 21 (exp -> STRING .)
    EQUALEQUAL      reduce using rule 21 (exp -> STRING .)
    LE              reduce using rule 21 (exp -> STRING .)
    LT              reduce using rule 21 (exp -> STRING .)
    GE              reduce using rule 21 (exp -> STRING .)
    GT              reduce using rule 21 (exp -> STRING .)
    ANDAND          reduce using rule 21 (exp -> STRING .)
    OROR            reduce using rule 21 (exp -> STRING .)
    SEMICOLON       reduce using rule 21 (exp -> STRING .)
    FUNCTION        reduce using rule 21 (exp -> STRING .)
    IF              reduce using rule 21 (exp -> STRING .)
    IDENTIFIER      reduce using rule 21 (exp -> STRING .)
    RETURN          reduce using rule 21 (exp -> STRING .)
    VAR             reduce using rule 21 (exp -> STRING .)
    NUMBER          reduce using rule 21 (exp -> STRING .)
    STRING          reduce using rule 21 (exp -> STRING .)
    TRUE            reduce using rule 21 (exp -> STRING .)
    FALSE           reduce using rule 21 (exp -> STRING .)
    NOT             reduce using rule 21 (exp -> STRING .)
    LPAREN          reduce using rule 21 (exp -> STRING .)
    $end            reduce using rule 21 (exp -> STRING .)
    LBRACE          reduce using rule 21 (exp -> STRING .)
    RPAREN          reduce using rule 21 (exp -> STRING .)
    COMMA           reduce using rule 21 (exp -> STRING .)


state 7

    (4) element -> stmt . SEMICOLON
    (5) element -> stmt .

    SEMICOLON       shift and go to state 21
    FUNCTION        reduce using rule 5 (element -> stmt .)
    IF              reduce using rule 5 (element -> stmt .)
    IDENTIFIER      reduce using rule 5 (element -> stmt .)
    RETURN          reduce using rule 5 (element -> stmt .)
    VAR             reduce using rule 5 (element -> stmt .)
    NUMBER          reduce using rule 5 (element -> stmt .)
    STRING          reduce using rule 5 (element -> stmt .)
    TRUE            reduce using rule 5 (element -> stmt .)
    FALSE           reduce using rule 5 (element -> stmt .)
    NOT             reduce using rule 5 (element -> stmt .)
    LPAREN          reduce using rule 5 (element -> stmt .)
    $end            reduce using rule 5 (element -> stmt .)


state 8

    (25) exp -> LPAREN . exp RPAREN
    (19) exp -> . IDENTIFIER
    (20) exp -> . NUMBER
    (21) exp -> . STRING
    (22) exp -> . TRUE
    (23) exp -> . FALSE
    (24) exp -> . NOT exp
    (25) exp -> . LPAREN exp RPAREN
    (26) exp -> . exp PLUS exp
    (27) exp -> . exp MINUS exp
    (28) exp -> . exp TIMES exp
    (29) exp -> . exp MOD exp
    (30) exp -> . exp DIVIDE exp
    (31) exp -> . exp EQUALEQUAL exp
    (32) exp -> . exp LE exp
    (33) exp -> . exp LT exp
    (34) exp -> . exp GE exp
    (35) exp -> . exp GT exp
    (36) exp -> . exp ANDAND exp
    (37) exp -> . exp OROR exp
    (38) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 16
    NUMBER          shift and go to state 2
    STRING          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 12
    NOT             shift and go to state 15
    LPAREN          shift and go to state 8

    exp                            shift and go to state 22

state 9

    (17) stmt -> VAR . IDENTIFIER EQUAL exp

    IDENTIFIER      shift and go to state 23


state 10

    (0) S' -> js .



state 11

    (13) stmt -> IF . exp compoundstmt
    (14) stmt -> IF . exp compoundstmt ELSE compoundstmt
    (19) exp -> . IDENTIFIER
    (20) exp -> . NUMBER
    (21) exp -> . STRING
    (22) exp -> . TRUE
    (23) exp -> . FALSE
    (24) exp -> . NOT exp
    (25) exp -> . LPAREN exp RPAREN
    (26) exp -> . exp PLUS exp
    (27) exp -> . exp MINUS exp
    (28) exp -> . exp TIMES exp
    (29) exp -> . exp MOD exp
    (30) exp -> . exp DIVIDE exp
    (31) exp -> . exp EQUALEQUAL exp
    (32) exp -> . exp LE exp
    (33) exp -> . exp LT exp
    (34) exp -> . exp GE exp
    (35) exp -> . exp GT exp
    (36) exp -> . exp ANDAND exp
    (37) exp -> . exp OROR exp
    (38) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 16
    NUMBER          shift and go to state 2
    STRING          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 12
    NOT             shift and go to state 15
    LPAREN          shift and go to state 8

    exp                            shift and go to state 24

state 12

    (23) exp -> FALSE .

    PLUS            reduce using rule 23 (exp -> FALSE .)
    MINUS           reduce using rule 23 (exp -> FALSE .)
    TIMES           reduce using rule 23 (exp -> FALSE .)
    MOD             reduce using rule 23 (exp -> FALSE .)
    DIVIDE          reduce using rule 23 (exp -> FALSE .)
    EQUALEQUAL      reduce using rule 23 (exp -> FALSE .)
    LE              reduce using rule 23 (exp -> FALSE .)
    LT              reduce using rule 23 (exp -> FALSE .)
    GE              reduce using rule 23 (exp -> FALSE .)
    GT              reduce using rule 23 (exp -> FALSE .)
    ANDAND          reduce using rule 23 (exp -> FALSE .)
    OROR            reduce using rule 23 (exp -> FALSE .)
    SEMICOLON       reduce using rule 23 (exp -> FALSE .)
    FUNCTION        reduce using rule 23 (exp -> FALSE .)
    IF              reduce using rule 23 (exp -> FALSE .)
    IDENTIFIER      reduce using rule 23 (exp -> FALSE .)
    RETURN          reduce using rule 23 (exp -> FALSE .)
    VAR             reduce using rule 23 (exp -> FALSE .)
    NUMBER          reduce using rule 23 (exp -> FALSE .)
    STRING          reduce using rule 23 (exp -> FALSE .)
    TRUE            reduce using rule 23 (exp -> FALSE .)
    FALSE           reduce using rule 23 (exp -> FALSE .)
    NOT             reduce using rule 23 (exp -> FALSE .)
    LPAREN          reduce using rule 23 (exp -> FALSE .)
    $end            reduce using rule 23 (exp -> FALSE .)
    LBRACE          reduce using rule 23 (exp -> FALSE .)
    RPAREN          reduce using rule 23 (exp -> FALSE .)
    COMMA           reduce using rule 23 (exp -> FALSE .)


state 13

    (1) js -> element . js
    (1) js -> . element js
    (2) js -> .
    (3) element -> . FUNCTION IDENTIFIER LPAREN optparams RPAREN compoundstmt
    (4) element -> . stmt SEMICOLON
    (5) element -> . stmt
    (13) stmt -> . IF exp compoundstmt
    (14) stmt -> . IF exp compoundstmt ELSE compoundstmt
    (15) stmt -> . IDENTIFIER EQUAL exp
    (16) stmt -> . RETURN exp
    (17) stmt -> . VAR IDENTIFIER EQUAL exp
    (18) stmt -> . exp
    (19) exp -> . IDENTIFIER
    (20) exp -> . NUMBER
    (21) exp -> . STRING
    (22) exp -> . TRUE
    (23) exp -> . FALSE
    (24) exp -> . NOT exp
    (25) exp -> . LPAREN exp RPAREN
    (26) exp -> . exp PLUS exp
    (27) exp -> . exp MINUS exp
    (28) exp -> . exp TIMES exp
    (29) exp -> . exp MOD exp
    (30) exp -> . exp DIVIDE exp
    (31) exp -> . exp EQUALEQUAL exp
    (32) exp -> . exp LE exp
    (33) exp -> . exp LT exp
    (34) exp -> . exp GE exp
    (35) exp -> . exp GT exp
    (36) exp -> . exp ANDAND exp
    (37) exp -> . exp OROR exp
    (38) exp -> . IDENTIFIER LPAREN optargs RPAREN

    $end            reduce using rule 2 (js -> .)
    FUNCTION        shift and go to state 5
    IF              shift and go to state 11
    IDENTIFIER      shift and go to state 4
    RETURN          shift and go to state 1
    VAR             shift and go to state 9
    NUMBER          shift and go to state 2
    STRING          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 12
    NOT             shift and go to state 15
    LPAREN          shift and go to state 8

    stmt                           shift and go to state 7
    js                             shift and go to state 25
    exp                            shift and go to state 14
    element                        shift and go to state 13

state 14

    (18) stmt -> exp .
    (26) exp -> exp . PLUS exp
    (27) exp -> exp . MINUS exp
    (28) exp -> exp . TIMES exp
    (29) exp -> exp . MOD exp
    (30) exp -> exp . DIVIDE exp
    (31) exp -> exp . EQUALEQUAL exp
    (32) exp -> exp . LE exp
    (33) exp -> exp . LT exp
    (34) exp -> exp . GE exp
    (35) exp -> exp . GT exp
    (36) exp -> exp . ANDAND exp
    (37) exp -> exp . OROR exp

    SEMICOLON       reduce using rule 18 (stmt -> exp .)
    FUNCTION        reduce using rule 18 (stmt -> exp .)
    IF              reduce using rule 18 (stmt -> exp .)
    IDENTIFIER      reduce using rule 18 (stmt -> exp .)
    RETURN          reduce using rule 18 (stmt -> exp .)
    VAR             reduce using rule 18 (stmt -> exp .)
    NUMBER          reduce using rule 18 (stmt -> exp .)
    STRING          reduce using rule 18 (stmt -> exp .)
    TRUE            reduce using rule 18 (stmt -> exp .)
    FALSE           reduce using rule 18 (stmt -> exp .)
    NOT             reduce using rule 18 (stmt -> exp .)
    LPAREN          reduce using rule 18 (stmt -> exp .)
    $end            reduce using rule 18 (stmt -> exp .)
    PLUS            shift and go to state 34
    MINUS           shift and go to state 36
    TIMES           shift and go to state 31
    MOD             shift and go to state 37
    DIVIDE          shift and go to state 29
    EQUALEQUAL      shift and go to state 35
    LE              shift and go to state 28
    LT              shift and go to state 32
    GE              shift and go to state 30
    GT              shift and go to state 33
    ANDAND          shift and go to state 26
    OROR            shift and go to state 27


state 15

    (24) exp -> NOT . exp
    (19) exp -> . IDENTIFIER
    (20) exp -> . NUMBER
    (21) exp -> . STRING
    (22) exp -> . TRUE
    (23) exp -> . FALSE
    (24) exp -> . NOT exp
    (25) exp -> . LPAREN exp RPAREN
    (26) exp -> . exp PLUS exp
    (27) exp -> . exp MINUS exp
    (28) exp -> . exp TIMES exp
    (29) exp -> . exp MOD exp
    (30) exp -> . exp DIVIDE exp
    (31) exp -> . exp EQUALEQUAL exp
    (32) exp -> . exp LE exp
    (33) exp -> . exp LT exp
    (34) exp -> . exp GE exp
    (35) exp -> . exp GT exp
    (36) exp -> . exp ANDAND exp
    (37) exp -> . exp OROR exp
    (38) exp -> . IDENTIFIER LPAREN optargs RPAREN

    IDENTIFIER      shift and go to state 16
    NUMBER          shift and go to state 2
    STRING          shift and go to state 6
    TRUE            shift and go to state 3
    FALSE           shift and go to state 12
    NOT             shift and go to state 15
    LPAREN          shift and go to state 8

    exp                            shift and go to state 38

state 16

    (19) exp -> IDENTIFIER .
    (38) exp -> IDENTIFIER . LPAREN optargs RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    PLUS            reduce using rule 19 (exp -> IDENTIFIER .)
    MINUS           reduce using rule 19 (exp -> IDENTIFIER .)
    TIMES           reduce using rule 19 (exp -> IDENTIFIER .)
    MOD             reduce using rule 19 (exp -> IDENTIFIER .)
    DIVIDE          reduce using rule 19 (exp -> IDENTIFIER .)
    EQUALEQUAL      reduce using rule 19 (exp -> IDENTIFIER .)
    LE              reduce using rule 19 (exp -> IDENTIFIER .)
    LT              reduce using rule 19 (exp -> IDENTIFIER .)
    GE              reduce using rule 19 (exp -> IDENTIFIER .)
    GT              reduce using rule 19 (exp -> IDENTIFIER .)
    ANDAND          reduce using rule 19 (exp -> IDENTIFIER .)
    OROR            reduce using rule 19 (exp -> IDENTIFIER .)
    SEMICOLON       reduce using rule 19 (exp -> IDENTIFIER .)
    FUNCTION        reduce using rule 19 (exp -> IDENTIFIER .)
    IF              reduce using rule 19 (exp -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 19 (exp -> IDENTIFIER .)
    RETURN          reduce using rule 19 (exp -> IDENTIFIER .)
    VAR             reduce using rule 19 (exp -> IDENTIFIER .)
    NUMBER          reduce using rule 19 (exp -> IDENTIFIER .)
    STRING          reduce using rule 19 (exp -> IDENTIFIER .)
    TRUE            reduce using rule 19 (exp -> IDENTIFIER .)
    FALSE           reduce using rule 19 (exp -> IDENTIFIER .)
    NOT             reduce using rule 19 (exp -> IDENTIFIER .)
    $end            reduce using rule 19 (exp -> IDENTIFIER .)
    LBRACE          reduce using rule 19 (exp -> IDENTIFIER .)
    RPAREN          reduce using rule 19 (exp -> IDENTIFIER .)
    COMMA           reduce using rule 19 (exp -> IDENTIFIER .)
    LPAREN          shift and go to state 19

  ! LPAREN          [ reduce using rule 19 (exp -> IDENTIFIER .) ]


state 17

    (16) stmt -> RETURN exp .
    (26) exp -> exp . PLUS exp
    (27) exp -> exp . MINUS exp
    (28) exp -> exp . TIMES exp
    (29) exp -> exp . MOD exp
    (30) exp -> exp . DIVIDE exp
    (31) exp -> exp . EQUALEQUAL exp
    (32) exp -> exp . LE exp
    (33) exp -> exp . LT exp
    (34) exp -> exp . GE exp
    (35) exp -> exp . GT exp
    (36) exp -> exp . ANDAND exp
    (37) exp -> exp . OROR exp
